--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html>
 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+<script type="text/javascript" src="https://threejs.org/build/three.js"></script>
+<script type="text/javascript" src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+<script type="module">
+    import main from './main.js';
+    main();
+</script>
+
 <head>
     <title>Earth Visualizer</title>
     <link rel="icon" type="imagem/png" href="img/earthIcon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="webgl"></div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
-    <script type="text/javascript" src="https://threejs.org/build/three.js"></script>
-    <script type="text/javascript" src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+    <canvas id="mycanvas"></canvas>
+
+    <!--
+        Shaders to emulate stars twinkling
+    -->
     <script id="vertexShader" type="x-shader/x-vertex">
         varying float intensity;
         varying vec2 texturecoords;
@@ -24,7 +45,6 @@
             texturecoords = uv.xy;
         }
     </script>
-
     <script id="fragmentShader" type="x-shader/x-fragment">
         uniform sampler2D bgtexture;
         uniform float time;
@@ -39,9 +59,6 @@
             );
         }
     </script>
-
-    <script src="helpers.js"></script>
-    <script src="main.js"></script>
 </body>
 
 </html>
