--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+<script src="./api_data.js"> </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
 <script type="text/javascript" src="https://threejs.org/build/three.js"></script>
 <script type="text/javascript" src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
