--- a/index.html
+++ b/index.html
@@ -26,11 +26,29 @@
             height: 100%;
             overflow: hidden;
         }
+
+        #help {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            text-align: left;
+            z-index: 100;
+            display: block;
+            color: aliceblue;
+            font-size: small;
+            font-family: 'Courier New', Courier, monospace;
+        }
     </style>
 </head>
 
 <body>
     <canvas id="mycanvas"></canvas>
+    <div id="help">
+        Press Esc to turn the simulation back on. <br>
+        By selecting a planet, more informations will be shown regarding it. <br>
+        Use your mouse to orbit around the Sun. <br>
+        In the control panel, there are many options to set up the simulation. <br>
+    </div>
 
     <!--
         Shaders to emulate stars twinkling
