It wasnt supposed to be

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <canvas id="mycanvas"></canvas>
     <div id="help">
         Press Esc to turn the simulation back on. <br>
-        By selecting a planet, more informations will be shown regarding it. <br>
+        Selecting a planet with the mouse will double its size. <br>
         Use your mouse to orbit around the Sun. <br>
         In the control panel, there are many options to set up the simulation. <br>
     </div>
